:bug: Fix an issue with the search placeholder sometimes not showing up in mail

--- a/src/stylesheets/mail.css
+++ b/src/stylesheets/mail.css
@@ -112,7 +112,7 @@ html .FolderNavigation__ButtonNewMailWrapper .FolderNavigation__ButtonNewMail {
 	background: var(--theme-color);
 	color: var(--theme-accent-color);
 	font-family: 'Inter', sans-serif;
-	font-weight: bold;
+	font-weight: 500;
 	font-size: 15px;
 	padding-top: 12px;
 	padding-bottom: 12px;
